fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -466,7 +466,6 @@
   "New email": "Email mới",
   "Email can't be empty": "Không được để trống email",
   "Your import completed": "Đã hoàn thành việc nhập dữ liệu",
-  "Sorry, invalid embed link": "Ôi, liên kết được nhúng không hợp lệ",
   "Previous match": "Phù hợp trước",
   "Next match": "Phù hợp tiếp",
   "Find and replace": "Tìm kiếm và thay thế",
@@ -508,6 +507,7 @@
   "Code": "Code",
   "Comment": "Bình luận",
   "Create link": "Tạo đường link",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Xin lỗi, đã xảy ra lỗi khi tạo đường link",
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Xóa bảng",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "Không",
   "Delete embed": "Xóa phần nhúng",
+  "Upload an image": "Upload an image",
   "Could not import file": "Không thể nhập file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
