fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -466,7 +466,6 @@
   "New email": "Novo e-mail",
   "Email can't be empty": "E-mail não pode estar vazio",
   "Your import completed": "Sua importação foi concluída",
-  "Sorry, invalid embed link": "Desculpe, link embed inválido",
   "Previous match": "Correspondência anterior",
   "Next match": "Próxima Correspondência",
   "Find and replace": "Localizar e substituir",
@@ -508,6 +507,7 @@
   "Code": "Código",
   "Comment": "Comentar",
   "Create link": "Criar atalho",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Desculpe, ocorreu um erro ao criar o link",
   "Create a new child doc": "Criar um documento filho",
   "Delete table": "Excluir tabela",
@@ -573,6 +573,7 @@
   "Video": "Vídeo",
   "None": "Nada",
   "Delete embed": "Deletar embed",
+  "Upload an image": "Upload an image",
   "Could not import file": "Não foi possível importar o arquivo",
   "Unsubscribed from document": "Cancelada inscrição do documento",
   "Unsubscribed from collection": "Cancelada inscrição da coleção",
