fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -466,7 +466,6 @@
   "New email": "New email",
   "Email can't be empty": "Email can't be empty",
   "Your import completed": "Your import completed",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Previous match": "Previous match",
   "Next match": "Next match",
   "Find and replace": "Find and replace",
@@ -508,6 +507,7 @@
   "Code": "Kode",
   "Comment": "Komentari",
   "Create link": "Buat tautan",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Maaf, terjadi kesalahan saat membuat tautan",
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Hapus tabel",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Upload an image": "Upload an image",
   "Could not import file": "Tidak dapat mengimpor berkas",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
