--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -466,7 +466,6 @@
   "New email": "New email",
   "Email can't be empty": "Email can't be empty",
   "Your import completed": "Your import completed",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Previous match": "Previous match",
   "Next match": "Next match",
   "Find and replace": "Find and replace",
@@ -508,6 +507,7 @@
   "Code": "Code",
   "Comment": "Comment",
   "Create link": "สร้างลิงก์",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "ขออภัย เกิดข้อผิดพลาดขณะสร้างลิงก์",
   "Create a new child doc": "Create a new child doc",
   "Delete table": "ลบตาราง",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Upload an image": "Upload an image",
   "Could not import file": "ไม่สามารถนำเข้าไฟล์ได้",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
