fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -466,7 +466,6 @@
   "New email": "Ny e-post",
   "Email can't be empty": "E-post kan ikke være tom",
   "Your import completed": "Importen din er fullført",
-  "Sorry, invalid embed link": "Beklager, ugyldig embed-lenke",
   "Previous match": "Forrige treff",
   "Next match": "Neste treff",
   "Find and replace": "Finn og erstatt",
@@ -508,6 +507,7 @@
   "Code": "Kode",
   "Comment": "Kommentar",
   "Create link": "Opprett lenke",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Beklager, det oppstod en feil ved oppretting av lenken",
   "Create a new child doc": "Lag et nytt underdokument",
   "Delete table": "Slett tabell",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "Ingen",
   "Delete embed": "Slett embed",
+  "Upload an image": "Upload an image",
   "Could not import file": "Kunne ikke importere fil",
   "Unsubscribed from document": "Avsluttet abonnement fra dokument",
   "Unsubscribed from collection": "Avsluttet abonnement fra samling",
