fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -1018,7 +1018,7 @@
   "Member": "Membre",
   "Admins": "Administrateurs",
   "Date created": "Créé le",
-  "Crop Image": "Rogner l'image",
+  "Crop Image": "Crop Image",
   "Crop image": "Rogner l’image",
   "How does this work?": "Comment cela fonctionne-t-il ?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Vous pouvez importer un fichier zip provenant de l'export JSON d'une autre installation Outline. Dans {{ appName }}, ouvrez <em>Exporter</em> dans les paramètres et cliquez sur <em>Exporter les données</em>.",
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Choisissez un sous-domaine pour activer une page de connexion propre à votre équipe.",
   "This is the screen that workspace members will first see when they sign in.": "Cette page s'affichera pour les membres de l'espace de travail lors de leur première connexion.",
   "Danger": "Danger",
-  "You can delete this entire workspace including collections, documents, and users.": "Vous pouvez supprimer tout l'espace de travail dont les collections, les documents et les utilisateurs.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "Export des données",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "Un export complet peut prendre un certain temps, pensez à exporter un seul document ou une seule collection. Les données sont exportées sous forme d'archive zip de vos documents en format Markdown. Une fois l'export commencé, vous pouvez fermer cette page – nous enverrons un lien à <em>{{ userEmail }}</em> quand ce sera terminé.",
   "Recent exports": "Exports récents",
@@ -1094,7 +1094,7 @@
   "Import data": "Importer les données",
   "Import a JSON data file exported from another {{ appName }} instance": "Importer un fichier de données JSON exporté depuis une autre instance {{ appName }}",
   "Import pages from a Confluence instance": "Importer des pages depuis une instance Confluence",
-  "Enterprise": "Entreprise",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "Transférez rapidement vos documents, pages et fichiers existants à partir d'autres outils et services vers {{appName}}. Vous pouvez également glisser-déposer n'importe quel document HTML, Markdown et texte dans les collections de l'application.",
   "Recent imports": "Importé récemment",
   "Configure a variety of integrations with third-party services.": "Configurer une variété d'intégration avec des services tiers.",
