--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -1018,7 +1018,7 @@
   "Member": "Member",
   "Admins": "Administratorzy",
   "Date created": "Data utworzenia",
-  "Crop Image": "Przytnij obraz",
+  "Crop Image": "Crop Image",
   "Crop image": "Przytnij obraz",
   "How does this work?": "Jak to działa?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Możesz zaimportować plik zip, który został wcześniej wyeksportowany z opcji JSON w innej instancji. W {{ appName }} otwórz <em>Eksport</em> w pasku bocznym Ustawień i kliknij <em>Eksportuj dane</em>.",
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Wybierz subdomenę, aby umożliwić stronę logowania tylko dla Twojego zespołu.",
   "This is the screen that workspace members will first see when they sign in.": "To jest ekran, który członkowie przestrzeni roboczej zobaczą jako pierwszy po zalogowaniu.",
   "Danger": "Uwaga",
-  "You can delete this entire workspace including collections, documents, and users.": "Możesz usunąć całą tę przestrzeń roboczą, w tym kolekcje, dokumenty i użytkowników.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "Eksportuj dane",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "Pełny eksport może zająć trochę czasu — rozważ wyeksportowanie pojedynczego dokumentu lub kolekcji. Możesz zamknąć tę stronę po rozpoczęciu eksportu — jeśli masz włączone powiadomienia, wyślemy link na adres <em>{{ userEmail }}</em>, gdy eksport zostanie zakończony.",
   "Recent exports": "Najnowsze eksporty",
@@ -1094,7 +1094,7 @@
   "Import data": "Importuj dane",
   "Import a JSON data file exported from another {{ appName }} instance": "Zaimportuj plik danych JSON wyeksportowany z innej instancji {{ appName }}",
   "Import pages from a Confluence instance": "Importuj strony z instancji Confluence",
-  "Enterprise": "Przedsiębiorstwo",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "Szybko przenieś swoje istniejące dokumenty, strony i pliki z innych narzędzi i usług do {{appName}}. Możesz także przeciągnąć i upuścić dowolne dokumenty HTML, Markdown i tekstowe bezpośrednio do Kolekcji w aplikacji.",
   "Recent imports": "Ostatnio zaimportowane",
   "Configure a variety of integrations with third-party services.": "Konfiguruj integracje z usługami innych firm.",
