fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -1018,7 +1018,7 @@
   "Member": "멤버",
   "Admins": "관리자",
   "Date created": "생성 일자",
-  "Crop Image": "이미지 자르기",
+  "Crop Image": "Crop Image",
   "Crop image": "이미지 자르기",
   "How does this work?": "어떻게 동작합니까?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "다른 인스턴스의 JSON 옵션에서 이전에 내보낸 압축 파일을 가져올 수 있습니다. {{ appName }} 에서 설정 사이드바에서 <em>내보내기</em>를 열고 <em>데이터 내보내기</em>클릭합니다.",
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "팀 전용 로그인 페이지를 활성화하려면 하위 도메인을 선택하십시오.",
   "This is the screen that workspace members will first see when they sign in.": "워크스페이스 멤버들이 로그인할 때 가장 먼저 보게 되는 화면입니다.",
   "Danger": "위험",
-  "You can delete this entire workspace including collections, documents, and users.": "컬렉션, 문서, 사용자를 포함한 전체 워크스페이스를 삭제할 수 있습니다.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "데이터 내보내기",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "전체 내보내기는 시간이 걸릴 수 있으므로 단일 문서나 컬렉션을 내보내는 것을 고려하세요. 내보내기가 시작되면 이 페이지를 떠나셔도 됩니다. 알림이 활성화되어 있는 경우 완료되면 <em>{{ userEmail }}</em>으로 링크를 이메일로 보내드립니다.",
   "Recent exports": "최근 내보내기",
@@ -1094,7 +1094,7 @@
   "Import data": "데이터 가져오기",
   "Import a JSON data file exported from another {{ appName }} instance": "다른 {{ appName }} 인스턴스에서 내보낸 JSON 데이터 파일 가져오기",
   "Import pages from a Confluence instance": "Confluence 인스턴스에서 페이지 가져오기",
-  "Enterprise": "엔터프라이즈",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "기존 문서, 페이지 및 파일을 다른 도구 및 서비스에서 {{appName}} 으로 빠르게 전송합니다. HTML, Markdown 및 텍스트 문서를 앱의 컬렉션으로 직접 끌어다 놓을 수도 있습니다.",
   "Recent imports": "최근에 가져온",
   "Configure a variety of integrations with third-party services.": "다양한 타사 서비스와의 통합을 구성합니다.",
