fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -1018,7 +1018,7 @@
   "Member": "Mitglied",
   "Admins": "Admins",
   "Date created": "Erstellungsdatum",
-  "Crop Image": "Bild zuschneiden",
+  "Crop Image": "Crop Image",
   "Crop image": "Bild zuschneiden",
   "How does this work?": "Wie funktioniert das?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Du kannst eine ZIP-Datei importieren, die zuvor mithilfe der JSON-Export Funktion exportiert wurde. Öffne dazu in {{ appName }} <em>Exportieren</em> in der Seitenleiste Einstellungen und klicke auf <em>Daten exportieren</em>.",
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Wählen Sie eine Subdomain, um eine Login-Seite nur für Ihr Team zu aktivieren.",
   "This is the screen that workspace members will first see when they sign in.": "Dies ist der Bildschirm, den Arbeitsbereich-Mitglieder zuerst sehen, wenn sie sich anmelden.",
   "Danger": "Achtung",
-  "You can delete this entire workspace including collections, documents, and users.": "Du kannst den gesamten Arbeitsbereich einschließlich der Sammlungen, Dokumente und Benutzer löschen.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "Daten exportieren",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "Ein vollständiger Export kann einige Zeit in Anspruch nehmen, erwägen Sie den Export eines einzelnen Dokuments oder einer einzelnen Sammlung. Sie können diese Seite verlassen, sobald der Export gestartet ist – wenn Sie Benachrichtigungen aktiviert haben, wir senden einen Link an <em>{{ userEmail }}</em> wenn er abgeschlossen ist.",
   "Recent exports": "Kürzliche Exporte",
@@ -1094,7 +1094,7 @@
   "Import data": "Daten importieren",
   "Import a JSON data file exported from another {{ appName }} instance": "Importiere eine JSON-Datendatei, die von einer anderen {{ appName }} Instanz exportiert wird",
   "Import pages from a Confluence instance": "Importieren Sie Seiten aus einer Confluence-Instanz",
-  "Enterprise": "Unternehmen",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "Übertrage unkompliziert bestehende Dokumente, Seiten und Dateien aus anderen Tools und Diensten nach {{appName}}. Ebenso kannst du per Drag-and-Drop beliebige HTML-, Markdown- oder Textdateien direkt in Sammlungen innerhalb der Anwendungen ziehen.",
   "Recent imports": "Neueste Importe",
   "Configure a variety of integrations with third-party services.": "Konfigurieren Sie verschiedene Integrationen mit Drittanbieterdiensten.",
