--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -1018,7 +1018,7 @@
   "Member": "Member",
   "Admins": "Administradores",
   "Date created": "Fecha de creación",
-  "Crop Image": "Recortar imagen",
+  "Crop Image": "Crop Image",
   "Crop image": "Recortar imagen",
   "How does this work?": "¿Cómo funciona esto?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Puedes importar un archivo zip que se exportó previamente desde la opción JSON en otra instancia. En {{ appName }}, abre <em>Exportar</em> en la barra lateral de configuración y haz clic en <em>Exportar datos</em>.",
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Elige un subdominio para habilitar una página de inicio de sesión única para tu equipo.",
   "This is the screen that workspace members will first see when they sign in.": "Esta es la pantalla que los miembros del espacio verán primero al iniciar sesión.",
   "Danger": "Peligro",
-  "You can delete this entire workspace including collections, documents, and users.": "Puedes eliminar todo este espacio de trabajo incluyendo colecciones, documentos y usuarios.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "Exportar datos",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "Una exportación completa puede tardar un poco. Considera exportar un solo documento o colección. Puedes salir de esta página una vez iniciada la exportación; si tienes las notificaciones activadas, te enviaremos un enlace a <em>{{ userEmail }}</em> cuando haya finalizado.",
   "Recent exports": "Exportaciones recientes",
