--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Vyberte subdoménu a povolte přihlašovací stránku pouze pro svůj tým.",
   "This is the screen that workspace members will first see when they sign in.": "Toto je obrazovka, kterou členové pracovního prostoru uvidí jako první, když se přihlásí.",
   "Danger": "Nebezpečí",
-  "You can delete this entire workspace including collections, documents, and users.": "Můžete odstranit celý tento pracovní prostor včetně kolekcí, dokumentů a uživatelů.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "Exportovat data",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.",
   "Recent exports": "Nedávné exporty",
@@ -1094,7 +1094,7 @@
   "Import data": "Importovat data",
   "Import a JSON data file exported from another {{ appName }} instance": "Importujte datový soubor JSON exportovaný z instance {{ appName }}",
   "Import pages from a Confluence instance": "Importujte stránky z aplikace Confluence",
-  "Enterprise": "Podnik",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "Rychle přeneste své stávající dokumenty, stránky a soubory z jiných nástrojů a služeb do {{appName}}. Jakékoli HTML, Markdown a textové dokumenty můžete také přetáhnout přímo do sbírky v aplikaci.",
   "Recent imports": "Nedávné importy",
   "Configure a variety of integrations with third-party services.": "Configure a variety of integrations with third-party services.",
