fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "サブドメインを選択して、チーム専用のログインページを有効にします。",
   "This is the screen that workspace members will first see when they sign in.": "これは、ワークスペース メンバーが最初にログインしたときに表示される画面です。",
   "Danger": "危険",
-  "You can delete this entire workspace including collections, documents, and users.": "コレクション、ドキュメント、およびユーザーを含むワークスペース全体を削除できます。",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "データのエクスポート",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "完全なデータをエクスポートするには、時間がかかることがあります。代わりに、単一のドキュメントまたはコレクションをエクスポートすることを検討してください。処理が開始された後、このウェブページを閉じることができます。通知を有効にした場合、エクスポートが完了すると、Url が <em>{{ userEmail }}</em> にメールされます。",
   "Recent exports": "最近のエクスポート",
@@ -1094,7 +1094,7 @@
   "Import data": "データのインポート",
   "Import a JSON data file exported from another {{ appName }} instance": "別の {{ appName }} インスタンスからエクスポートされた JSON データファイルをインポートする",
   "Import pages from a Confluence instance": "Confluence からページをインポートする",
-  "Enterprise": "エンタープライズ",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "既存のドキュメント、ページ、ファイルを他のツールやサービスから {{appName}} にすばやく転送します。 HTML、Markdown、およびドキュメントをアプリ内のコレクションに直接ドラッグ&ドロップすることもできます。",
   "Recent imports": "最近のインポート",
   "Configure a variety of integrations with third-party services.": "Configure a variety of integrations with third-party services.",
