fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -1018,7 +1018,7 @@
   "Member": "Gebruiker",
   "Admins": "Beheerders",
   "Date created": "Aanmaakdatum",
-  "Crop Image": "Afbeelding bijsnijden",
+  "Crop Image": "Crop Image",
   "Crop image": "Afbeelding bijsnijden",
   "How does this work?": "Hoe werkt dit?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Je kunt een zipbestand importeren dat eerder is geëxporteerd vanuit de JSON-optie in een andere instantie. In {{ appName }}, open <em>Exporteren</em> in de zijbalk in Voorkeuren en klik op <em>Exporteer gegevens</em>.",
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Kies een subdomein om een inlogpagina alleen voor jouw team in te schakelen.",
   "This is the screen that workspace members will first see when they sign in.": "Dit is het eerste scherm dat deelnemers van de werkruimte zien wanneer ze inloggen.",
   "Danger": "Gevaar",
-  "You can delete this entire workspace including collections, documents, and users.": "Je kunt deze hele werkruimte verwijderen inclusief collecties, documenten en gebruikers.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "Exporteer gegevens",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "Een volledige export kan even duren, overweeg om één document of collectie te exporteren. Je kunt deze pagina verlaten zodra de export is gestart - als je meldingen hebt ingeschakeld ontvang je een link naar <em>{{ userEmail }}</em> als het voltooid is.",
   "Recent exports": "Recente exporten",
@@ -1094,7 +1094,7 @@
   "Import data": "Importeer data",
   "Import a JSON data file exported from another {{ appName }} instance": "Importeer een JSON-gegevensbestand dat is geëxporteerd uit een andere {{ appName }} instantie",
   "Import pages from a Confluence instance": "Pagina's importeren van een Confluence instantie",
-  "Enterprise": "Zakelijk",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "Zet snel je bestaande documenten, pagina's en bestanden van andere tools en services over naar {{appName}}. Je kunt HTML-, Markdown- en tekstdocumenten ook rechtstreeks naar Collecties in de app slepen.",
   "Recent imports": "Recent geïmporteerd",
   "Configure a variety of integrations with third-party services.": "Een verscheidenheid van integraties met externe diensten configureren.",
