--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Escolha um subdomínio para habilitar uma página de login apenas para a sua equipa.",
   "This is the screen that workspace members will first see when they sign in.": "Este é o painel que os membros da área de trabalho verão primeiro quando entram.",
   "Danger": "Perigo",
-  "You can delete this entire workspace including collections, documents, and users.": "Pode eliminar a área de trabalho inteira, incluindo coleções, documentos e utilizadores.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "Exportar dados",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.",
   "Recent exports": "Exportações recentes",
@@ -1094,7 +1094,7 @@
   "Import data": "Importar dados",
   "Import a JSON data file exported from another {{ appName }} instance": "Importar um ficheiro de dados JSON exportado de outra instância do {{ appName }}",
   "Import pages from a Confluence instance": "Importar páginas de uma instância de Confluence",
-  "Enterprise": "Empresa",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "Transfira rapidamente os documentos existentes, páginas e ficheiros de outras ferramentas e serviços para {{appName}}. Também pode arrastar e soltar qualquer documento HTML, Markdown e documento de texto diretamente para as Coleções na aplicação.",
   "Recent imports": "Importações recentes",
   "Configure a variety of integrations with third-party services.": "Configure a variety of integrations with third-party services.",
