--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -1018,7 +1018,7 @@
   "Member": "Medlem",
   "Admins": "Administratörer",
   "Date created": "Datum skapad",
-  "Crop Image": "Beskär bild",
+  "Crop Image": "Crop Image",
   "Crop image": "Beskär bild",
   "How does this work?": "Hur fungerar detta?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Du kan importera en zip-fil som tidigare exporterades från JSON-alternativet i ett annat fall. I {{ appName }}, öppna <em>Exportera</em> i inställningspanelen och klicka på <em>Exportera data</em>.",
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Välj en underdomän för att aktivera en inloggningssida bara för ditt team.",
   "This is the screen that workspace members will first see when they sign in.": "Detta är den skärm som arbetsytans medlemmar först kommer att se när de loggar in.",
   "Danger": "Varning",
-  "You can delete this entire workspace including collections, documents, and users.": "Du kan ta bort hela arbetsytan inklusive samlingar, dokument och användare.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "Exportera data",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.",
   "Recent exports": "Senaste exporter",
