fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -1018,7 +1018,7 @@
   "Member": "成员",
   "Admins": "管理员",
   "Date created": "创建日期",
-  "Crop Image": "裁剪图像",
+  "Crop Image": "Crop Image",
   "Crop image": "裁剪图像",
   "How does this work?": "这是如何工作的？",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "您可以导入之前从另一个实例中的JSON选项导出的zip文件。在 {{ appName }} 的侧边栏设置中打开 <em>导出</em> ，并点击 <em>导出数据</em>。",
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "选择一个子域名，为您的团队创建独立专属的登录页。",
   "This is the screen that workspace members will first see when they sign in.": "这是工作区成员登录时首先看到的界面。",
   "Danger": "危险操作",
-  "You can delete this entire workspace including collections, documents, and users.": "你可以删除整个工作区，包括文档集、文档和用户。",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "导出数据",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "完整导出可能需要一些时间，请考虑导出单个文档或文档集。导出的数据是 Markdown 格式的文档压缩包。当导出已开始时您可以离开此页面。如果你开启了通知，当导出完成后，我们会发送链接至电子邮件 <em>{{ userEmail }}</em>。",
   "Recent exports": "最近导出",
@@ -1094,7 +1094,7 @@
   "Import data": "导入数据",
   "Import a JSON data file exported from another {{ appName }} instance": "导入从另一个 {{ appName }} 实例导出的 JSON 数据文件",
   "Import pages from a Confluence instance": "从 Confluence 实例导入页面",
-  "Enterprise": "企业服务",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "快速将您现有的文件、页面和文件从其他工具和服务转移到 {{appName}}。您还可以将任何 HTML、Markdown 和文本文件直接拖放到应用程序中的文档集中。",
   "Recent imports": "最近导入",
   "Configure a variety of integrations with third-party services.": "配置各种与第三方服务的集成。",
