--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "選擇一個子域名來為您的團隊啟用登入頁面。",
   "This is the screen that workspace members will first see when they sign in.": "這是工作區成員登入時首先會看到的介面。",
   "Danger": "危險",
-  "You can delete this entire workspace including collections, documents, and users.": "您可以刪除整個工作區，包括文件集，文件，以及使用者。",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "匯出數據",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "匯出所有文件集將會需要一些時間，可以的話，請考慮匯出單一的文件或文件集。我們會將您擁有的所有文件轉換為 Markdown 格式，並封裝為一個 zip 壓縮檔。\n在匯出作業開始後您即可離開這個頁面 – 如果您有開啟通知，匯出完成時我們會透過電子郵件寄送連結到 <em>{{ userEmail }}</em>。",
   "Recent exports": "最近匯出的",
@@ -1094,7 +1094,7 @@
   "Import data": "匯入數據",
   "Import a JSON data file exported from another {{ appName }} instance": "匯入從另一個 {{ appName }} 實例匯出的 JSON 資料檔案",
   "Import pages from a Confluence instance": "從 Confluence 實例匯入文件",
-  "Enterprise": "企業用戶",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "快速將您現有的文件、頁面和檔案從其他工具和服務轉移到 {{appName}}。您還可以直接將任何 HTML、Markdown 和純文本文件拖放到應用程式中的文件集中。",
   "Recent imports": "最近匯入的",
   "Configure a variety of integrations with third-party services.": "Configure a variety of integrations with third-party services.",
