--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -1018,7 +1018,7 @@
   "Member": "Membro",
   "Admins": "Administradores",
   "Date created": "Data de criação",
-  "Crop Image": "Cortar imagem",
+  "Crop Image": "Crop Image",
   "Crop image": "Cortar imagem",
   "How does this work?": "Como isso funciona?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Você pode importar um arquivo zip que foi exportado anteriormente da opção JSON em outra instância. Em {{ appName }}, abra <em>Exportar</em> na barra lateral de Configurações e clique em <em>Exportar Dados</em>.",
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Escolha um subdomínio para habilitar uma página de login apenas para a sua equipe.",
   "This is the screen that workspace members will first see when they sign in.": "Esta é a tela que os membros do espaço de trabalho verão pela primeira vez quando realizarem login.",
   "Danger": "Perigo",
-  "You can delete this entire workspace including collections, documents, and users.": "Você pode excluir este espaço de trabalho por completo incluindo coleções, documentos e usuários.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "Exportar dados",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "Uma exportação completa pode levar algum tempo. Considere exportar um único documento ou coleção. Os dados são exportados em um arquivo zip com seus documentos no formato Markdown. Você pode sair desta página assim que a exportação for iniciada - se as notificações estiverem ativadas, enviaremos um link por e-mail para <em>{{ userEmail }}</em> quando ela estiver concluída.",
   "Recent exports": "Exportações recentes",
@@ -1094,7 +1094,7 @@
   "Import data": "Importar dados",
   "Import a JSON data file exported from another {{ appName }} instance": "Importar um arquivo de dados JSON exportado de outra instância do {{ appName }}",
   "Import pages from a Confluence instance": "Importar páginas de uma instância do Confluence",
-  "Enterprise": "Empresarial",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "Transfira rapidamente seus documentos, páginas e arquivos existentes de outras ferramentas e serviços para o {{appName}}. Você também pode arrastar e soltar qualquer documento HTML, Markdown e texto diretamente nas Coleções do aplicativo.",
   "Recent imports": "Importações recentes",
   "Configure a variety of integrations with third-party services.": "Configurar uma variedade de integrações com serviços de terceiros.",
