fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -1018,7 +1018,7 @@
   "Member": "Medlem",
   "Admins": "Administratorer",
   "Date created": "Dato opprettet",
-  "Crop Image": "Beskjær bilde",
+  "Crop Image": "Crop Image",
   "Crop image": "Beskjær bilde",
   "How does this work?": "Hvordan fungerer dette?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Du kan importere en zip-fil som tidligere ble eksportert fra JSON-alternativet i en annen instans. I {{ appName }}, åpne <em>Eksport</em> i innstillingssidestolpen og klikk på <em>Eksporter Data</em>.",
@@ -1077,7 +1077,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Velg et underdomene for å aktivere en innloggingsside bare for teamet ditt.",
   "This is the screen that workspace members will first see when they sign in.": "Dette er skjermen som medlemmer av arbeidsområdet vil se først når de logger seg inn.",
   "Danger": "Fare",
-  "You can delete this entire workspace including collections, documents, and users.": "Du kan slette hele dette arbeidsområdet, inkludert samlinger, dokumenter og brukere.",
+  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
   "Export data": "Eksporter data",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "En full eksport kan ta litt tid, vurder å eksportere et enkelt dokument eller en samling. Du kan forlate denne siden når eksporten har startet – hvis du har aktivert varsler, vil vi sende en lenke på e-post til <em>{{ userEmail }}</em> når den er ferdig.",
   "Recent exports": "Nylige eksporter",
@@ -1094,7 +1094,7 @@
   "Import data": "Importer data",
   "Import a JSON data file exported from another {{ appName }} instance": "Importer en JSON datafil eksportert fra en annen {{ appName }}-instans",
   "Import pages from a Confluence instance": "Importer sider fra en Confluence-instans",
-  "Enterprise": "Bedrift",
+  "Enterprise": "Enterprise",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "Overfør raskt dine eksisterende dokumenter, sider og filer fra andre verktøy og tjenester til {{appName}}. Du kan også dra og slippe HTML-, Markdown- og tekst-dokumenter direkte inn i Samlinger i appen.",
   "Recent imports": "Nylige importer",
   "Configure a variety of integrations with third-party services.": "Konfigurer en rekke integrasjoner med tredjepartstjenester.",
