fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -285,7 +285,7 @@
   "You will receive an email when it's complete.": "完成后，你将收到一封电子邮件。",
   "Include attachments": "包含附件",
   "Including uploaded images and files in the exported data": "导出数据中包含上传的图片和文件",
-  "Include private collections": "Include private collections",
+  "Include private collections": "包含私人收藏",
   "{{count}} more user": "{{count}} 个用户",
   "{{count}} more user_plural": "{{count}} 个用户",
   "Filter options": "过滤选项",
@@ -320,11 +320,11 @@
   "Permission": "权限",
   "Change Language": "更改语言",
   "Dismiss": "忽略",
-  "Unable to download image": "Unable to download image",
+  "Unable to download image": "无法下载图片",
   "Lightbox": "大图模式",
   "View, navigate, or download images in the document": "浏览、查看或下载文档中的图片",
-  "Zoom in": "Zoom in",
-  "Zoom out": "Zoom out",
+  "Zoom in": "放大",
+  "Zoom out": "缩小",
   "Close": "关闭",
   "Previous": "上一个",
   "Next": "下一个",
@@ -373,7 +373,7 @@
   "Disable this setting to discourage search engines from indexing the page": "禁用此设置以阻止搜索引擎对该页建立索引",
   "Show last modified": "显示最后修改",
   "Display the last modified timestamp on the shared page": "在分享页面上显示最后修改的时间戳",
-  "Show table of contents": "Show table of contents",
+  "Show table of contents": "显示目录",
   "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "此文档集中的所有文档将在网上共享，包括以后添加的任何新文档",
   "Invite": "邀请",
@@ -422,7 +422,7 @@
   "Archived collections": "归档文档集",
   "New doc": "新建文档",
   "Empty": "空",
-  "No collections": "No collections",
+  "No collections": "暂无合集",
   "Collapse": "收起",
   "Expand": "展开",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "不支持的文档类型 - 请用Markdown，纯文本，HTML或Word格式",
@@ -432,7 +432,7 @@
   "Could not load shared documents": "无法加载共享文档",
   "Shared with me": "与我共享",
   "Show more": "显示更多",
-  "Link options": "Link options",
+  "Link options": "链接选项",
   "Could not load starred documents": "无法加载星标文件",
   "Starred": "已加星标",
   "Up to date": "已是最新版本",
