fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -765,7 +765,7 @@
   "Publish in <em>{{ location }}</em>": "Publish in <em>{{ location }}</em>",
   "Search documents": "Search documents",
   "No documents found for your filters.": "No documents found for your filters.",
-  "You’ve not got any drafts at the moment.": "You’ve not got any drafts at the moment.",
+  "You’ve not got any drafts at the moment.": "Jelenleg nincs egy piszkozatod se.",
   "Payment Required": "Payment Required",
   "No access to this doc": "No access to this doc",
   "It doesn’t look like you have permission to access this document.": "It doesn’t look like you have permission to access this document.",
@@ -924,18 +924,18 @@
   "workspace": "workspace",
   "Read all data": "Read all data",
   "Write all data": "Write all data",
-  "Any collection": "Any collection",
-  "All time": "All time",
-  "Past day": "Past day",
-  "Past week": "Past week",
-  "Past month": "Past month",
-  "Past year": "Past year",
-  "Any time": "Any time",
+  "Any collection": "Bármelyik gyűjtemény",
+  "All time": "Bármikor",
+  "Past day": "Elmúlt nap",
+  "Past week": "Elmúlt hét",
+  "Past month": "Elmúlt hónap",
+  "Past year": "Elmúlt év",
+  "Any time": "Bármikor",
   "Remove document filter": "Remove document filter",
   "Any status": "Any status",
   "Remove search": "Remove search",
-  "Any author": "Any author",
-  "Search titles only": "Search titles only",
+  "Any author": "Bármely szerző",
+  "Search titles only": "Keresés csak címekben",
   "Please try again or contact support if the problem persists": "Please try again or contact support if the problem persists",
   "No documents found for your search filters.": "No documents found for your search filters.",
   "Create personal API keys to authenticate with the API and programatically control\n      your workspace's data. For more details see the <em>developer documentation</em>.": "Személyes API-kulcsok létrehozása az API-val való hitelesítéshez és a munkaterület adatainak programozott vezérléséhez. További részletekért nézze meg a <em>fejlesztői dokumentációt</em>.",
@@ -1108,7 +1108,7 @@
   "Mentioned": "Megemlítve",
   "Receive a notification when someone mentions you in a document or comment": "Értesítés fogadása, amikor valaki megemlíti Önt egy dokumentumban vagy hozzászólásban",
   "Group mentions": "Group mentions",
-  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Értesítés fogadása, amikor valaki megjelöl egy csoportot, aminek tagja vagy egy dokumentumban vagy hozzászólásban",
   "Receive a notification when a comment thread you were involved in is resolved": "Értesítés fogadása, amikor megoldanak egy olyan hozzászólási szálat, amelyben Ön is részt vett",
   "Reaction added": "Reaction added",
   "Receive a notification when someone reacts to your comment": "Értesítlst kapsz, ha valaki reagál a hozzászólásodra",
@@ -1145,7 +1145,7 @@
   "Automatically return to the document you were last viewing when the app is re-opened.": "Automatikus visszatérés az utoljára megtekintett dokumentumhoz az alkalmazás újbóli megnyitásakor.",
   "Smart text replacements": "Intelligens szöveghelyettesítések",
   "Auto-format text by replacing shortcuts with symbols, dashes, smart quotes, and other typographical elements.": "Automatikus szövegformázás a rövidítések szimbólumokkal, kötőjelekkel, intelligens idézőjelekkel és más tipográfiai elemekkel való helyettesítésével.",
-  "You may delete your account at any time, note that this is unrecoverable": "Bármikor törölheted a fiókodat, de fontos, hogy utána nem szerezheted vissza",
+  "You may delete your account at any time, note that this is unrecoverable": "Bármikor törölheted a fiókodat, de utána nem szerezheted vissza",
   "Profile saved": "Profil elmentve",
   "Profile picture updated": "Profilkép frissítve",
   "Unable to upload new profile picture": "Nem lehet új profilképet feltölteni",
