--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -999,7 +999,7 @@
   "You’ll be able to add people to the group next.": "You’ll be able to add people to the group next.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "You can edit the name of this group at any time, however doing so too often might confuse your team mates.",
   "Disable mentions": "Disable mentions",
-  "When enabled, this group will not appear in mention suggestions and cannot be mentioned in documents or comments.": "When enabled, this group will not appear in mention suggestions and cannot be mentioned in documents or comments.",
+  "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.",
   "Add people to {{groupName}}": "Add people to {{groupName}}",
   "{{userName}} was removed from the group": "{{userName}} was removed from the group",
