--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -998,6 +998,8 @@
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "Les groupes sont destinés à organiser votre équipe. Ils fonctionnent mieux lorsqu'ils sont centrés autour d'une fonction ou d'une responsabilité — Support ou Ingénierie, par exemple.",
   "You’ll be able to add people to the group next.": "Vous pourrez ensuite ajouter des personnes au groupe.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "Vous pouvez modifier le nom de ce groupe à tout moment, mais le faire trop souvent risquerait de perturber les membres de votre équipe.",
+  "Disable mentions": "Disable mentions",
+  "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "Êtes-vous sûr de vouloir faire ça ? La suppression du groupe <em>{{groupName}}</em> fera perdre à ses membres l'accès aux collections et aux documents auxquels il est associé.",
   "Add people to {{groupName}}": "Ajouter des personnes à {{groupName}}",
   "{{userName}} was removed from the group": "{{userName}} a été retiré du groupe",
