--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -998,6 +998,8 @@
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "Los grupos son para organizar tu equipo. Funcionan mejor cuando se centran en una función o una responsabilidad — Soporte o Ingeniería, por ejemplo.",
   "You’ll be able to add people to the group next.": "A continuación, podrás añadir personas al grupo.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "Puedes editar el nombre de este grupo en cualquier momento, sin embargo, hacerlo con demasiada frecuencia podría confundir a tus compañeros de equipo.",
+  "Disable mentions": "Disable mentions",
+  "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "¿Estás seguro de eso? Eliminar el grupo <em>{{groupName}}</em> hará que sus miembros pierdan el acceso a las colecciones y documentos con los que está asociado.",
   "Add people to {{groupName}}": "Añadir personas a {{groupName}}",
   "{{userName}} was removed from the group": "{{userName}} fue eliminado del grupo",
