--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -998,6 +998,8 @@
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "Skupiny slouží k uspořádání vašeho týmu. Nejlépe fungují, jsou-li soustředěny kolem funkce nebo odpovědnosti – například podpory nebo inženýrství.",
   "You’ll be able to add people to the group next.": "Dále budete moci přidávat uživatele do skupiny.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "Název této skupiny můžete kdykoli upravit, ale příliš časté změny mohou způsobit zmatení ostatních uživatelů.",
+  "Disable mentions": "Disable mentions",
+  "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "Jsi si tím jisti? Odstranění skupiny <em>{{groupName}}</em> způsobí, že její členové ztratí přístup ke sbírkám a dokumentům, se kterými je spojena.",
   "Add people to {{groupName}}": "Přidat uživatele do {{groupName}}",
   "{{userName}} was removed from the group": "Uživatel {{userName}} byl odstraněn ze skupiny",
